[tool.poetry]
name = "reminder"
version = "0.1.0"
description = ""
authors = ["Peter McHale <peter.thomas.mchale@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
black = "^24.4.0"
flake8 = "^7.0.0"
pre-commit = "^3.7.0"
tox = "^4.14.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
